--- a/blogs/templates/blog.html
+++ b/blogs/templates/blog.html
@@ -33,7 +33,7 @@
                     {% else %}
                         {{ comment.guest_user }}:
                     {% endif %}
-                    {{ comment }}  {{ comment.date_posted.time() }}<br>
+                    {{ comment }}<br>
                 </div>
             {% endfor %}
         </div>
