--- a/templates/about_page.html
+++ b/templates/about_page.html
@@ -6,7 +6,8 @@
 <div class="my-5 abot_page">
     <h2>About us {{ render_icon('emoji-smile') }}</h2>
     <h3 class="border-0">Bloggr is a weblog application service.</h3>
-    <h3>We allow users from around the world know what it feels to be a writer. <br> <br>
+    <h3>
+        We allow users from around the world know what it feels to be a writer. <br> <br>
         Users don't need any experience in a professional writting. <br>
         They can share any type of content be it sports, documentaries, politics, festivals etc. for readers to read and comment.
 
@@ -14,6 +15,7 @@
 
         <a class="btn btn-primary my-5" id="register" href="{{ url_for('auth.register') }}">Register</a>
     </h3>
+    <div>
 </div>
 <hr>
 <footer>Copyright (c) 2022 <br> All Rights Reserved</footer>
