--- a/templates/base.html
+++ b/templates/base.html
@@ -10,7 +10,7 @@
     {% endblock %}
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light py-2 bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark py-2 bg-info">
         <div class="container-fluid">
 			<a class="navbar-brand" href="#">Bloggr</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -52,13 +52,16 @@
 					{% endif %}
 				</ul>
 				<span class="nav-item">
-					<a class="nav-link" href="{{ url_for('contact_page') }}" tabindex="-1">Contact Us</a>
+					<a class="nav-link text-white" href="{{ url_for('contact_page') }}" tabindex="-1">Contact Us</a>
 				</span>
 				<span class="nav-item">
-					<a class="nav-link" href="{{ url_for('about_page') }}" tabindex="-1">About</a>
+					<a class="nav-link text-white" href="{{ url_for('about_page') }}" tabindex="-1">About</a>
+				</span>
+				<span class="nav-item">
+					<a class="nav-link text-white" href="https://www.paypal.com/donate/?hosted_button_id=BHREYH9MS9RHW" tabindex="-1">Donate</a>
 				</span>
 				<form action="{{ url_for('blogs.home_page') }}" method="get" class="d-flex">
-					<input class="form-control mt-1 p-2" type="search" name="search" placeholder="SEARCH FOR BLOGS" aria-label="Search">
+					<input class="form-control mt-1 p-2" type="search" name="search" placeholder="Search for blogs" aria-label="Search">
 				</form>
 			</div>
 		</div>
