--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,14 +12,14 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark py-2 bg-info">
         <div class="container-fluid">
-			<a class="navbar-brand" href="#">Bloggr</a>
+			<a class="navbar-brand" href="/about/">Bloggr{{ render_icon('emoji-smile') }}</a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item">
-						<a class="nav-link active" aria-current="page" href="/">Home</a>
+						<a class="nav-link active me-3" aria-current="page" href="/">Home</a>
 					</li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle active" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
