--- a/app/users/templates/update_user.html
+++ b/app/users/templates/update_user.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% from 'bootstrap5/form.html' import render_form %}
+{% from 'bootstrap5/utils.html' import render_icon %}
 
 
 {% block body %}
