--- a/app/blogs/templates/blog.html
+++ b/app/blogs/templates/blog.html
@@ -1,6 +1,5 @@
 {% extends 'base.html' %}
-{% from 'bootstrap5/utils.html' import render_icon %}
-{% from 'bootstrap5/utils.html' import render_messages %}
+{% from 'bootstrap5/utils.html' import render_icon, render_messages %}
 {% from 'bootstrap5/form.html' import render_form %}
 
 
