--- a/templates/delete_user.html
+++ b/templates/delete_user.html
@@ -13,8 +13,7 @@
         {% endfor %}
     </div>
 {% else %}
-    <p class="my-5"><h5>This action cannot be undone</h5>
-</p>
+    <p class="my-5"><h5>This action cannot be undone</h5></p>
 {% endif %}
 <form action="" class="form" method="post">
     <div>
